# quiz-ai4thai-hacktron-2025

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api1/: Cargo.toml  Dockerfile
api1/src/: main.rs
api2/: Cargo.toml  Dockerfile
api2/src/: main.rs
scripts/: deploy.sh  test.sh
